--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <body>
 
   <div class="news-bar">
-    <span class="news-text">🔥 Breaking: Excel Data Entry Operator Workshop registrations are OPEN! Limited Seats, Hurry! 🔥</span>
+    <span class="news-text">🔥 Breaking: Excel Data Entry Operator Workshop registrations are OPEN! Limited Seats, Hurry Up! 🔥</span>
   </div>
 
   <header>
@@ -449,4 +449,5 @@
   </script>
 
 </body>
+
 </html>
