--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
   <div class="countdown" id="countdown"></div>
 
 <div class="section">
+  <h1>WorkShop on  7 September 2025 Time: 04:00 PM </h1>
+  <h2>Location : IT Computer Studes , HDFC Bank Gli, C.C Road Deoria </h2>
   <h2>📌 Workshop Content</h2>
   <ul class="content-list">
     <li>
@@ -417,7 +419,7 @@
     // Countdown Timer (set workshop date)
     const countdownEl = document.getElementById('countdown');
     const stickyCountdown = document.getElementById('sticky-countdown');
-    const targetDate = new Date("Aug 31, 2025 16:00:00").getTime();
+    const targetDate = new Date("September 7, 2025 16:00:00").getTime();
 
     setInterval(() => {
       const now = new Date().getTime();
@@ -451,3 +453,4 @@
 </body>
 
 </html>
+
